--- a/css/starbull.css
+++ b/css/starbull.css
@@ -22,8 +22,20 @@ input {
 padding: 2% 2%;
 border-radius: 6px;
 }
-.image {
-   box-shadow: 6px 6px 1px 0px rgba(0,0,0,.6);
- border-top: 2px solid maroon;
- border-left: 2px solid maroon;
+.hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://bit.ly/2N5kvOq");
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
