--- a/css/starbull.css
+++ b/css/starbull.css
@@ -1,7 +1,48 @@
 h1 {
+    background-color: green;
+    border-style: double;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    color:white;
+    font-size: 60px;
+}
+#socialMedia{
+    text-align: center;
+    position:fixed;
+    width: 30px;
+    bottom: 0;
+
+}
+.topnav {
+  overflow: hidden;
+  background-color: green;
+}
+
+.topnav a {
+  float: center;
+  color: white;
+  text-align: center;
+  padding: 7px 10px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
+/*h1 {
     font-family: merriweather;
     font-size: 40px;
-}
+}*/
 .form-container {
     display: inline-block;
     box-sizing: border-box;
