--- a/css/starbull.css
+++ b/css/starbull.css
@@ -6,6 +6,45 @@ h1 {
     color:white;
     font-size: 60px;
 }
+
+h2{
+    font-size: 35px;
+   font-family: 'Montserrat', sans-serif;
+  
+}
+
+body {
+    background-color: darkseagreen;
+    /*text-align: center;*/
+}
+.row {
+    display: flex;
+}
+
+nav {
+    border: 3px solid black;
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.column {
+    float: left;
+    width: 50%;
+}
+
+
+
+#Specials {
+    position: absolute;
+    left: auto;
+    text-align: left;
+    font-family:serif;
+    ;
+
+}
+
+
+
 #socialMedia{
     text-align: center;
     position:fixed;
@@ -16,6 +55,7 @@ h1 {
 .topnav {
   overflow: hidden;
   background-color: green;
+  padding: 10px;
 }
 
 .topnav a {
@@ -35,6 +75,22 @@ h1 {
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
+}
+
+.logo img {
+   float: left;
+    position: relative;
+    width: 150px;
+    margin: 6px;
+}
+
+#end{
+    text-align: center;
+    font-size: large;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    width: 100%;
 }
 
 
@@ -123,24 +179,7 @@ border-radius: 6px;
     transition: .4s;
     border: 1px solid black;
 }
-#columns2 {
-    column-count: 2;
-    column-width: 1000px;
-   padding-top: 20px;
-}
-.column-left2 {
-    width: 50%;
-     margin-left: 0%;
-     padding-left: 80px;
-     position: relative;
 
-}
-.column-right2 {
-    display: inline-block;
-    width: 50%;
-    padding-right: 60px;
-    position: relative;
-}
 
 .container {
     display: inline-block;
@@ -153,11 +192,3 @@ border-radius: 6px;
     padding: 4%;
 }
 
-.header img {
-    float: left;
-    width: 140px;
-    height: 136px;
-    position:relative;
-    left:500px;   
-    top: 3px;
-}
