--- a/css/menu.css
+++ b/css/menu.css
@@ -62,11 +62,6 @@ padding: 5px;
 display: flex;
 }
 
-nav {
-border: 3px solid black;
-font-size: large;
-font-family: 'Times New Roman', Times, serif;
-}
 
 #Specials {
 position: absolute;
@@ -99,23 +94,42 @@ dd{
 font-size: 20px;
 font-family: 'Courier New', monospace;
 }
+nav {
+    border: 3px solid black;
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
+}
+
 .topnav {
-overflow: hidden;
-background-color: green;
+  overflow: hidden;
+  background-color: green;
+  padding: 10px;
 }
 
 .topnav a {
-float: center;
-color: white;
-text-align: center;
-padding: 7px 10px;
-text-decoration: none;
-font-size: 17px;
+  float: center;
+  color: white;
+  text-align: center;
+  padding: 7px 10px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .topnav a:hover {
-background-color: #ddd;
-color: black;
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.logo img {
+   float: left;
+    position: relative;
+    width: 150px;
+    margin: 6px;
 }
 
 .header img {
