--- a/css/menu.css
+++ b/css/menu.css
@@ -25,8 +25,9 @@ font-size: large;
 position: fixed;
 bottom: 0;
 right: 0;
-width: 2000px;
+width: 100%;
 }
+
 
 table, th, td {
 border: 3px solid black;
