--- a/css/menu.css
+++ b/css/menu.css
@@ -146,3 +146,14 @@ margin-bottom: 1em;
 margin-top: 0.1em;
 font-weight:lighter;
 }
+
+.header {
+	width: 100%;
+	height: 80px;
+	padding: 20px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+  z-index: 1;
+}
