--- a/css/menu.css
+++ b/css/menu.css
@@ -3,146 +3,148 @@ h1 {
   border-style: double;
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
-  color:white;
+  color: white;
   font-size: 60px;
-  }
-  body {
+}
+
+body {
   background-color: darkseagreen;
   text-align: center;
-  }
-  
-  #socialMedia{
+  padding-top: 180px;
+}
+
+#socialMedia {
   text-align: left;
-  position:fixed;
+  position: fixed;
   width: 30px;
   bottom: 0;
-  }
-  
-  
-  #end{
+}
+
+#end {
   text-align: center;
   font-size: large;
   position: fixed;
   bottom: 0;
   right: 0;
   width: 100%;
-  }
-  
-  
-  table, th, td {
+}
+
+table, th, td {
   border: 3px solid black;
   font-family: cursive;
   text-align: center;
   border-color: white;
-  }
-  
-  table {
+}
+
+table {
   width: 10%;
-  }
-  
-  
-  p {
+}
+
+p {
   text-align: center;
-  }
-  
-  #hours {
+}
+
+#hours {
   text-align: left;
   font-family: 'Times New Roman', Times, serif;
-  
-  }
-  *{
+}
+
+* {
   box-sizing: border-box;
-  }
-  .column {
-  
+}
+
+.column {
   width: 33.33%;
   padding: 5px;
-  }
-  
-  .row {
+}
+
+.row {
   display: flex;
-  }
-  
-  
-  #Specials {
-  position: absolute;
-  left: auto;
-  text-align: left;
-  font-family:serif;
-  
-  
-  }
-  
-  h2{
+}
+
+
+
+h2 {
   font-size: 45px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-decoration: underline;
   text-align: center;
-  font-weight:lighter;
+  font-weight: lighter;
   margin-bottom: 1em;
   margin-top: 0.1em;
-  }
-  
-  dt{
+}
+
+dt {
   font-size: 30px;
   font-weight: bold;
   text-decoration: underline;
   font-family: 'Courier New', monospace;
   margin-bottom: 0.2em;
-  }
-  
-  dd{
+}
+
+dd {
   font-size: 20px;
   font-family: 'Courier New', monospace;
-  }
-  nav {
-      border: 3px solid black;
-      font-size: large;
-      font-family: 'Times New Roman', Times, serif;
-  }
-  
-  .topnav {
-    overflow: hidden;
-    background-color: green;
-    padding: 10px;
-  }
-  
-  .topnav a {
-    float: center;
-    color: white;
-    text-align: center;
-    padding: 7px 10px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  .logo img {
-     float: left;
-      position: relative;
-      width: 150px;
-      margin: 6px;
-  }
-  
-  hr{
+}
+
+nav {
+  border: 3px solid white;
+  font-size: large;
+  font-family: 'Times New Roman', Times, serif;
+
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: green;
+  padding: 10px;
+}
+
+.topnav a {
+  float: center;
+  color: white;
+  text-align: center;
+  padding: 7px 10px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.logo img {
+  float: left;
+  position: relative;
+  width: 150px;
+  margin: 6px;
+}
+
+hr {
   margin-top: 3em;
   margin-bottom: 3em;
-  }
-  
-  h3{
+}
+
+h3 {
   text-align: center;
   font-size: 45px;
   font-family: 'Courier New', monospace;
   margin-bottom: 1em;
   margin-top: 0.1em;
-  font-weight:lighter;
-  }
+  font-weight: lighter;
+}
+
+.dropdown-menu{
+  background-color: darkseagreen;
+}
+
+.nav-item {
+  color: white;
+}
+
