changed the background color to white

--- a/css/specials.css
+++ b/css/specials.css
@@ -7,7 +7,7 @@ h1 {
     font-size: 60px;
 }
 body {
-    background-color: darkseagreen;
+    background-color: white;
     text-align: center;
 }
 
