--- a/css/main.css
+++ b/css/main.css
@@ -169,11 +169,11 @@ float: right;*/
 /* css for starbull.php*/
 .cwing {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/cwing.jpg");
-  height: 400px;
-  background-position: left;
+    url("../images/bannerImage.jpeg");
+  height: 300px;
+  background-position: center;
   background-repeat: repeat;
-  position: relative;
+  position: static;
   width: 100%;
   background-size: 100%;
 }
