icons now overlap menu on menu.php

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ dt {
 }
 
 #Specials {
-    position: relative;
+    position: absolute;
     left: auto;
     text-align: left;
     font-family: serif;
