--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ dt {
 
 #ingredients {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/ingredients.jpeg");
+    url("../imgs/ingredients.jpeg");
   height: 200px;
   background-position: center;
   background-repeat: no-repeat;
@@ -169,7 +169,7 @@ float: right;*/
 /* css for starbull.php*/
 .cwing {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/bannerImage.jpeg");
+    url("../imgs/bannerImage.jpeg");
   height: 300px;
   background-position: center;
   background-repeat: repeat;
