--- a/css/starbull.css
+++ b/css/starbull.css
@@ -1,154 +1,153 @@
 h1 {
-    background-color: green;
-    border-style: double;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    color:white;
-    font-size: 60px;
+  background-color: green;
+  border-style: double;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: center;
+  color: white;
+  font-size: 60px;
 }
 
-h2{
-    font-size: 35px;
-   font-family: 'Montserrat', sans-serif;
-  
+h2 {
+  font-size: 35px;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    background-color: white;
-    /*text-align: center;*/
+  background-color: white;
+  /*text-align: center;*/
 }
 .row {
-    display: flex;
+  display: flex;
 }
 
 nav {
-    border: 3px solid black;
-    font-size: large;
-    font-family: 'Times New Roman', Times, serif;
+  border: 3px solid black;
+  font-size: large;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .column {
-    float: left;
-    width: 50%;
+  float: left;
+  width: 50%;
 }
 
 #Specials {
-    position: absolute;
-    left: auto;
-    text-align: left;
-    font-family:serif;
-    ;
-
+  position: absolute;
+  left: auto;
+  text-align: left;
+  font-family: serif;
 }
 
-#socialMedia{
-    text-align: center;
-    position:fixed;
-    width: 30px;
-    bottom: 0;
-
+#socialMedia {
+  text-align: center;
+  position: fixed;
+  width: 30px;
+  bottom: 0;
 }
 
-
-#end{
-    text-align: center;
-    font-size: large;
-    position: relative;
-    bottom: 0;
-    right: 0;
-    width: 100%;
+#end {
+  text-align: center;
+  font-size: large;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  width: 100%;
 }
 
 .form-container {
-    display: inline-block;
-    box-sizing: border-box;
-    background-color: rgb(202, 202, 202);
-    padding: 20px;
-    padding-right: 40px;
-    border-radius: 2%;
-    }
+  display: inline-block;
+  box-sizing: border-box;
+  background-color: rgb(202, 202, 202);
+  padding: 20px;
+  padding-right: 40px;
+  border-radius: 2%;
+}
 
 input {
-    width: 100%;
-    color: black;
-    }
-
-.name, .dob, .phone, .address, .email {
-   display: inline-block;
-    color: black;
-    border-radius: 2px;
-    padding-right: 5px;
+  width: 100%;
+  color: black;
 }
 
-.submit > input[type=submit]
-{
-padding: 2% 2%;
-border-radius: 6px;
+.name,
+.dob,
+.phone,
+.address,
+.email {
+  display: inline-block;
+  color: black;
+  border-radius: 2px;
+  padding-right: 5px;
+}
+
+.submit > input[type="submit"] {
+  padding: 2% 2%;
+  border-radius: 6px;
 }
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://bit.ly/2N5kvOq");
-    height: 400px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/imgs/pexels-photo-6205575.jpeg");
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .hero-text {
-    text-align: center;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 #columns {
-    column-count: 2;
-    column-width: 500px;
-   padding-top: 20px;
+  column-count: 2;
+  column-width: 500px;
+  padding-top: 20px;
 }
 
- 
 .column-left {
-    width: 50%;
-    margin-left: 20%;
+  width: 50%;
+  margin-left: 20%;
 }
 
 .column-right {
-    width: 80%;
-    padding-top: 1px;
+  width: 80%;
+  padding-top: 1px;
 }
 .review1 {
-    background-color: rgba(122, 242, 132, 0.461);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 6px;
-    text-align: center;
-    padding: 6%;
+  background-color: rgba(122, 242, 132, 0.461);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border-radius: 6px;
+  text-align: center;
+  padding: 6%;
 }
 .review2 {
-    background-color: rgba(116, 108, 108, 0.742);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 6px;
-    text-align: center;
-    padding: 4%;
+  background-color: rgba(116, 108, 108, 0.742);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border-radius: 6px;
+  text-align: center;
+  padding: 4%;
 }
 
-.review1:hover, .review2:hover {
-    background-color: rgba(255, 255, 255, .4);
-    transition: .4s;
-    border: 1px solid black;
+.review1:hover,
+.review2:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  transition: 0.4s;
+  border: 1px solid black;
 }
-
 
 .container {
-    display: inline-block;
-    width: 100%;
+  display: inline-block;
+  width: 100%;
 }
-.company, .heritage, .tools {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 6px;
-    text-align: center;
-    padding: 4%;
+.company,
+.heritage,
+.tools {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border-radius: 6px;
+  text-align: center;
+  padding: 4%;
 }
-
