--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ dt {
 
 #ingredients {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../imgs/ingredients.jpeg");
+    url("/imgs/ingredients.jpeg");
   height: 200px;
   background-position: center;
   background-repeat: no-repeat;
@@ -112,17 +112,6 @@ dt {
   transform: translate(-50%, -50%);
   color: white;
 }
-
-/*#wingplatter {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/wingplatter.jpg");
-  height: 400px;
-  background-position: left;
-  background-repeat: repeat;
-  position: relative;
-  width: 100%;
-  background-size: 100%;
-}*/
 
 .table {
   margin-right: auto;
@@ -169,10 +158,10 @@ float: right;*/
 /* css for starbull.php*/
 .cwing {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../imgs/bannerImage.jpeg");
-  height: 300px;
+    url("/imgs/coffee.jpeg");
+  height: 350px;
   background-position: center;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   position: static;
   width: 100%;
   background-size: 100%;
