--- a/css/specials.css
+++ b/css/specials.css
@@ -1,123 +1,118 @@
 h1 {
-    background-color: green;
-    border-style: double;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    color:white;
-    font-size: 60px;
+  background-color: green;
+  border-style: double;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-align: center;
+  color: white;
+  font-size: 60px;
 }
 body {
-    background-color: white;
-    text-align: center;
+  background-color: white;
+  text-align: center;
 }
 
-#socialMedia{
-    text-align: left;
-    position:fixed;
-    width: 30px;
-    bottom: 0;
+#socialMedia {
+  text-align: left;
+  position: fixed;
+  width: 30px;
+  bottom: 0;
 }
 
-
-table, th, td {
-    border: 3px solid black;
-    font-family: cursive;
-    text-align: center;
-    border-color: white;
+table,
+th,
+td {
+  border: 3px solid black;
+  font-family: cursive;
+  text-align: center;
+  border-color: white;
 }
 
 table {
-    width: 10%;
+  width: 10%;
 }
 
-
 p {
-    text-align: center;
+  text-align: center;
 }
 
 #hours {
-    text-align: left;
-    font-family: 'Times New Roman', Times, serif;
-
+  text-align: left;
+  font-family: "Times New Roman", Times, serif;
 }
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 .column {
-
-    width: 33.33%;
-    padding: 5px;
+  width: 33.33%;
+  padding: 5px;
 }
 
 .row {
-    display: flex;
+  display: flex;
 }
 
 nav {
-    border: 3px solid black;
-    font-size: large;
-    font-family: 'Times New Roman', Times, serif;
+  border: 3px solid black;
+  font-size: large;
+  font-family: "Times New Roman", Times, serif;
 }
 
 #Specials {
-    position: absolute;
-    left: auto;
-    text-align: left;
-    font-family:serif;
-
-
+  position: absolute;
+  left: auto;
+  text-align: left;
+  font-family: serif;
 }
 
-h2{
-    font-size: 45px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-decoration: underline;
-    text-align: center;
-    font-weight:lighter;
-    margin-bottom: 1em;
-    margin-top: 0.1em;
+h2 {
+  font-size: 45px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-decoration: underline;
+  text-align: center;
+  font-weight: lighter;
+  margin-bottom: 1em;
+  margin-top: 0.1em;
 }
 
-dt{
-    font-size: 30px;
-    font-weight: bold;
-    text-decoration: underline;
-    font-family: 'Courier New', monospace;
-    margin-bottom: 0.2em;
+dt {
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: underline;
+  font-family: "Courier New", monospace;
+  margin-bottom: 0.2em;
 }
 
-dd{
-    font-size: 20px;
-    font-family: 'Courier New', monospace;
+dd {
+  font-size: 20px;
+  font-family: "Courier New", monospace;
 }
 
 .logo img {
-   float: left;
-    position: relative;
-    width: 150px;
-    margin: 6px;
+  float: left;
+  position: relative;
+  width: 150px;
+  margin: 6px;
 }
 
-
-hr{
-    margin-top: 3em;
-    margin-bottom: 3em;
+hr {
+  margin-top: 3em;
+  margin-bottom: 3em;
 }
 
-#end{
-    text-align: center;
-    font-size: large;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 100%;
+#end {
+  text-align: center;
+  font-size: large;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 100%;
 }
 
-h3{
-    text-align: center;
-    font-size: 45px;
-    font-family: 'Courier New', monospace;
-    margin-bottom: 1em;
-    margin-top: 0.1em;
-    font-weight:lighter;
+h3 {
+  text-align: center;
+  font-size: 45px;
+  font-family: "Courier New", monospace;
+  margin-bottom: 1em;
+  margin-top: 0.1em;
+  font-weight: lighter;
 }
