--- a/css/starbull.css
+++ b/css/starbull.css
@@ -85,7 +85,7 @@ input {
 }
 .hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/imgs/pexels-photo-6205575.jpeg");
+    url("/imgs/coffeeBanner.jpeg");
   height: 300px;
   background-position: center;
   background-repeat: no-repeat;
