--- a/css/main.css
+++ b/css/main.css
@@ -309,3 +309,18 @@ border-radius: 6px;
 .accordion-header.sticky-top {
     top: 180px;
 }
+
+#socialMedia {
+    position: fixed;
+    right: 0;
+    bottom: 15px;
+    z-index: 1200;
+}
+
+#socialMedia img {
+    text-align: center;
+    max-width: 40px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 3px 3px #222222;
+    z-index: 1300px;
+}
