--- a/css/main.css
+++ b/css/main.css
@@ -1,179 +1,179 @@
 /*css accross all pages*/
 
 .navbar-custom {
-    background-color: green;
+	background-color: green;
 }
 
 h1 {
-    background-color: green;
-    border-style: double;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    color: white;
-    font-size: 60px;
-    padding-top: 4px;
+	background-color: green;
+	border-style: double;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	text-align: center;
+	color: white;
+	font-size: 60px;
+	padding-top: 4px;
 }
 
 h2 {
-    font-size: 45px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    font-weight: lighter;
-    margin-bottom: -0.3em;
-    margin-top: 0.1em;
+	font-size: 45px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	text-align: center;
+	font-weight: lighter;
+	margin-bottom: -0.3em;
+	margin-top: 0.1em;
 }
 
 .us {
-    font-size: 45px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-decoration: underline;
-    text-align: center;
-    font-weight: lighter;
-    margin-bottom: -0.3em;
-    margin-top: 0.1em;
+	font-size: 45px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	text-decoration: underline;
+	text-align: center;
+	font-weight: lighter;
+	margin-bottom: -0.3em;
+	margin-top: 0.1em;
 }
 
 body {
-  background-color: white;
+	background-color: white;
 }
 
 /* css for the navigation bar across all pages*/
 
 nav {
-  border: 3px solid black;
-  font-size: large;
-  font-family: "Times New Roman", Times, serif;
+	border: 3px solid black;
+	font-size: large;
+	font-family: "Times New Roman", Times, serif;
 }
 
 .logo img {
-    float: left;
-    position: relative;
-    width: 150px;
-    margin: 6px;
+	float: left;
+	position: relative;
+	width: 150px;
+	margin: 6px;
 }
 
-
 #end {
-    text-align: center;
-    font-size: large;
-    position: relative;
-    bottom: 0;
-    right: 0;
-    width: 100%;
+	text-align: center;
+	font-size: large;
+	position: relative;
+	bottom: 0;
+	right: 0;
+	width: 100%;
 }
 
 /* css for the table in specialsOTW.html*/
 
-table, th, td {
-    border: 1.2px solid black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    border-color: black;
-    margin-top: 2em;
-    width: 100%;
+table,
+th,
+td {
+	border: 1.2px solid black;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	text-align: center;
+	border-color: black;
+	margin-top: 2em;
+	width: 100%;
 }
 
 dt {
-    font-size: 30px;
-    font-weight: bold;
-    text-decoration: underline;
+	font-size: 30px;
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 #Specials {
-    position: absolute;
-    left: auto;
-    text-align: left;
-    font-family: serif;
-    ;
+	position: absolute;
+	left: auto;
+	text-align: left;
+	font-family: serif;
 }
 
 /*css for mainPage.html*/
 
 #ingredients {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/imgs/ingredients.jpeg");
-  height: 200px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+	url("/imgs/ingredients.jpeg");
+	height: 200px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
 }
 
 .ingredients-text {
-  text-align: center;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+	text-align: center;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
 }
 
 .table {
-  margin-right: auto;
-  margin-left: auto;
-  width: 200px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 200px;
 }
 
 #hours {
-  text-align: center;
-  font-family: "Times New Roman", Times, serif;
+	text-align: center;
+	font-family: "Times New Roman", Times, serif;
 }
 
 /*for mainpage.html wingassortment text*/
 
 .connectTexts {
-  text-align: left;
-  padding: 40px;
+	text-align: left;
+	padding: 40px;
 }
 
 .row {
-  display: flex;
-  background-color: lightgray;
+	display: flex;
+	background-color: lightgray;
 }
 
 #connect img {
-  padding: 20px;
-  object-fit: contain;
-  width: 500px;
+	padding: 20px;
+	object-fit: contain;
+	width: 500px;
 }
 
 .column {
-  float: right;
-  width: 50%;
-  margin-bottom: 15px;
+	float: right;
+	width: 50%;
+	margin-bottom: 15px;
 }
 
 .column img {
-  /*width: 400px;
+	/*width: 400px;
 float: right;*/
-  padding: 20px;
-  width: 600px;
-  object-fit: contain;
+	padding: 20px;
+	width: 600px;
+	object-fit: contain;
 }
 
 /* css for starbull.php*/
 
 .cwing {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/imgs/coffee.jpeg");
-  height: 350px;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: static;
-  width: 100%;
-  background-size: 100%;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+	url("/imgs/coffee.jpeg");
+	height: 350px;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: static;
+	width: 100%;
+	background-size: 100%;
 }
 
 /*css for us.html*/
 
 p {
-  font-size: 25px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 25px;
+	font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 h3 {
-  font-size: 35px;
-  font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 35px;
+	font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 /* Sticky elements for Menu page */
@@ -183,18 +183,18 @@ h3 {
 @media only screen and (max-width: 980px){
  .navbar-collapse .collapse .show {
  
-    then adjust .accordion-header.sticky-top{ 
-        top: 250px;
+	then adjust .accordion-header.sticky-top{ 
+		top: 250px;
 
-    }  ??
+	}	??
  }
 }
 */
 
 .navbar.sticky-top {
-    z-index: 1100;
+	z-index: 1100;
 }
 
 .accordion-header.sticky-top {
-    top: 180px;
+	top: 180px;
 }
