--- a/css/main.css
+++ b/css/main.css
@@ -206,17 +206,23 @@ h3 {
     top: 180px;
 
 }
+
+/* review and sign up forms */
+
 #userForm h3 {
     font-family: 'Montserrat', Arial, sans-serif;
     text-shadow: 3px 3px 0px rgb(145, 250, 131);
 }
+
 body.signupbody {
     background-image: url("https://static01.nyt.com/images/2016/02/09/dining/09COOKING_CHICKENWINGS2/09COOKING_CHICKENWINGS2-superJumbo.jpg");
     background-color: rgb(255,255,255,0.4);
     background-blend-mode: lighten;
 }
+
 #userAccount {
     font-family: 'Montserrat', Arial, sans-serif;
+    font-size: larger;
     background-color: rgb(83, 184, 69);
     width: auto;
     margin-top: 100px;
@@ -231,6 +237,7 @@ body.signupbody {
     display: inline-block;
     padding: 5px 20px;
 }
+
 .btn-outline-success {
     color: black !important;
 }
@@ -242,6 +249,7 @@ body.signupbody {
 
 #reviewForm {
     font-family: 'Montserrat', Arial, sans-serif;
+    font-size: larger;
     background-color: rgb(83, 184, 69);
     width: 85%;
     margin: auto;
@@ -253,4 +261,8 @@ body.signupbody {
 .form-control:focus {
     border-color:  rgb(27, 61, 22);
     box-shadow: inset 0 1px 1px rgba(14, 31, 11, 0.075), 0 0 8px rgba(12, 27, 10, 0.6)
+}
+
+.colform {
+    padding-bottom: 15px;
 }
