--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,7 @@ dt {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: white;
+	text-shadow: 2px 2px black;
 }
 
 .table {
@@ -214,6 +215,7 @@ input {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: white;
+	text-shadow: 2px 2px black;
 }
 
 #columns {
