--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,17 @@ body {
 }
 
 .nav-active {
-    background-color: white!important;
+	background-color: #44c767;
+	border-radius: 28px;
+	border: 1px solid #18ab29;
+	display: inline-block;
+	cursor: pointer;
+	color: #ffffff;
+	font-family: Arial;
+	font-size: 17px;
+	padding: 10px 15px;
+	text-decoration: none;
+	text-shadow: 0px 1px 0px #2f6627;
 }
 
 /* css for the navigation bar across all pages*/
