--- a/css/main.css
+++ b/css/main.css
@@ -49,11 +49,8 @@ body {
 	display: inline-block;
 	cursor: pointer;
 	color: #ffffff;
-	font-family: Arial;
-	font-size: 17px;
-	padding: 10px 15px;
+	padding: 1px;
 	text-decoration: none;
-	text-shadow: 0px 1px 0px #2f6627;
 }
 
 /* css for the navigation bar across all pages*/
