--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,8 @@ nav {
 	bottom: 0;
 	right: 0;
 	width: 100%;
+	padding-top: 150px;
+	padding-right: 5.5rem;
 }
 
 /* css for the table in specialsOTW.html*/
@@ -161,15 +163,6 @@ h3 {
 	left: auto;
 	text-align: left;
 	font-family: serif;
-}
-
-#end {
-	text-align: center;
-	font-size: large;
-	position: relative;
-	bottom: 0;
-	right: 0;
-	width: 100%;
 }
 
 .form-container {
