--- a/css/main.css
+++ b/css/main.css
@@ -71,13 +71,13 @@ nav {
 
 #end {
 	text-align: center;
-	font-size: large;
+	font-size: 15px;
 	position: relative;
 	bottom: 0;
 	right: 0;
 	width: 100%;
 	padding-top: 150px;
-	padding-right: 5.5rem;
+	padding-right: 10%;
 }
 
 footer {
