--- a/css/main.css
+++ b/css/main.css
@@ -306,15 +306,21 @@ input {
 #userForm h3 {
     font-family: 'Montserrat', Arial, sans-serif;
 }
-
+.wrapper {
+	top: 0;
+	left: 0;
+	width: 200%;
+	height: 200%;
+}
 .wrapper img{
-    position: absolute;
-	display: block;
-    top: 0;
-    left: 0;
-	width: 100%;
-	height: 100%;
-    filter: brightness(80%);
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: 0;
+	min-width: 50%;
+	min-height: 50%;
 }
 
 
@@ -328,6 +334,7 @@ input {
     border: 5px;
     border-radius: 10px;
     border-style: outset;
+	z-index: 1300;
 }
 
 #userForm {
@@ -388,5 +395,5 @@ input {
 	width: 270px;
 	height: 240px;
 	margin: 0 auto;
-	margin-top: 2%;	
+	margin-top: 2%;
 }
