--- a/css/main.css
+++ b/css/main.css
@@ -299,23 +299,24 @@ input {
 	font-family: 'Montserrat', Arial, sans-serif;
 }
 
-.wrapper {
+.signup-wrapper {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
-.wrapper img {
+.signup-wrapper img {
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin: auto;
-	min-width: 100%;
-	min-height: 100%;
+	min-width: 100vh;
+	height: 100vh;
 }
 
 #userAccount {
@@ -323,7 +324,8 @@ input {
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: larger;
 	background-color: rgb(83, 184, 69);
-	top: 125;
+	top: 100px;
+	bottom: 125px;
 	margin: 125px auto 0px auto;
 	border: 5px;
 	border-radius: 10px;
