--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,19 @@ body {
 }
 
 .carousel-inner {
-	max-height: 400px;
+	max-height: 25rem;
+}
+
+.carousel-inner img {
+	width: 100%;
+	min-height: 25rem;
+	max-height: fit-content;
+	object-fit: cover;
 }
 
 .carousel-caption {
 	bottom: 20%;
+	margin-bottom: 10%;
 	text-shadow: 3px 3px 6px black;
 }
 
@@ -120,7 +128,10 @@ dt {
 }
 
 #hours {
+	height: 100%;
+	position: relative;
 	text-align: center;
+	z-index: 1999;
 }
 
 /*for mainpage.html wingassortment text*/
@@ -229,14 +240,17 @@ input {
 }
 
 .hero-banner {
+	height: fit-content;
 	width: 100%;
 	align-content: center;
 }
 
 .hero-text {
+	/* height: max-content; */
+	padding-top: 20px;
 	text-align: center;
-	background-position: center;
-	transform: translate(-0%, -140%);
+	/* background-position: center; */
+	/* transform: translate(-0%, -140%); */
 	color: white;
 	text-shadow: 3px 3px 6px black;
 }
@@ -275,9 +289,6 @@ input {
 	padding: 4%;
 }
 
-.containerAbout {
-	background-color: lightgray;
-}
 
 .aboutInfo1 {
 	background-color: rgba(255, 255, 255, .4);
